// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article screen renders expected components and styles in desktop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            Help
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.1.10"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.1.10"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="content "
          data-testid="hc-article"
        >
          <h2
            class="title"
            data-testid="hc-article-title"
          >
            help
          </h2>
          <div
            class="originalArticleButton"
          >
            <a
              aria-label="View original article"
              target="_blank"
              title="View original article"
            >
              <span
                class="container Icon--link-external"
                data-testid="Icon--link-external"
                type="Icon--link-external"
              >
                <svg
                  aria-hidden="true"
                  realfilename="link-external.svg"
                />
              </span>
            </a>
          </div>
          <div
            class="article"
            data-testid="hc-article-body"
            role="presentation"
          >
            here
          </div>
        </div>
      </div>
      <footer
        class="c8"
      >
        <div
          class="c9"
        >
          <a
            class="c10"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`article screen renders expected components and styles in mobile 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            Help
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.1.10"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.1.10"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="content contentMobile"
          data-testid="hc-article"
        >
          <h2
            class="title"
            data-testid="hc-article-title"
          >
            help
          </h2>
          <div
            class="originalArticleButton"
          >
            <a
              aria-label="View original article"
              target="_blank"
              title="View original article"
            >
              <span
                class="container Icon--link-external mobile"
                data-testid="Icon--link-external"
                type="Icon--link-external"
              >
                <svg
                  aria-hidden="true"
                  realfilename="link-external.svg"
                />
              </span>
            </a>
          </div>
          <div
            class="article"
            data-testid="hc-article-body"
            role="presentation"
          >
            here
          </div>
        </div>
      </div>
      <footer
        class="c8"
      >
        <div
          class="c9"
        >
          <a
            class="c10"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`conversation screen renders expected components and styles in desktop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c13 {
  position: relative;
  display: inline-block;
}

.c13 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c13 svg:hover path,
.c13 svg:active path,
.c13 svg:focus path {
  fill: #68737d;
}

.c13 svg path {
  fill: #87929d;
}

.c10 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c11 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c9 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  box-shadow: 0 0 0.8571428571428571rem 0.5714285714285714rem #fff;
  z-index: 1;
}

.c12 {
  margin-top: 0.5714285714285714rem;
}

.c8 {
  overflow: hidden;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            Answer Bot
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.1.10"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.1.10"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="c8"
        />
      </div>
      <footer
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="c11 text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="1val-field_1.3.3--input"
              id="1val-field_1.3.3--label"
            >
              Type your question here...
            </label>
            <textarea
              aria-describedby="1val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="1val-field_1.3.3--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.1.10"
              data-testid="message-field"
              id="1val-field_1.3.3--input"
              name="answerBotInputValue"
              placeholder="Type your question here..."
              rows="3"
            />
          </div>
        </div>
        <div
          class="c12"
        >
          <a
            class="c13"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`conversation screen renders expected components and styles in mobile 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c11 {
  position: relative;
  display: inline-block;
}

.c11 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c11 svg:hover path,
.c11 svg:active path,
.c11 svg:focus path {
  fill: #68737d;
}

.c11 svg path {
  fill: #87929d;
}

.c14 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c15 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c13 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 -0.07142857142857142rem 0 0 #d8dcde !important;
}

.c16 {
  height: 3.0714285714285716rem !important;
  border-radius: 50% !important;
  margin: 0 0.2857142857142857rem !important;
}

.c16 svg {
  padding: 0.5714285714285714rem 0.5rem 0.5714285714285714rem 0.6428571428571429rem;
  box-sizing: content-box;
  min-width: 1rem;
  min-height: 1rem;
  width: 1rem;
  height: 1rem;
}

.c16 svg g {
  fill: #87929d !important;
}

.c16 svg path {
  fill: #87929d !important;
}

.c16:hover,
.c16:active,
.c16:focus {
  cursor: pointer;
  background: #e9ebed;
}

.c16:hover svg > g,
.c16:active svg > g,
.c16:focus svg > g {
  fill: #49545c !important;
}

.c9 {
  padding: 0;
  box-shadow: 0 0 0.8571428571428571rem 0.5714285714285714rem #fff;
  z-index: 1;
}

.c10 {
  margin-top: 0.5714285714285714rem;
}

.c8 {
  overflow: hidden;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            Answer Bot
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.1.10"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.1.10"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="c8"
        />
      </div>
      <footer
        class="c9"
      >
        <div
          class="c10"
        >
          <a
            class="c11"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
        </div>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="c15 text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  for="4val-field_1.3.3--input"
                  id="4val-field_1.3.3--label"
                >
                  Type your question here...
                </label>
                <textarea
                  aria-describedby="4val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="4val-field_1.3.3--label"
                  class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
                  data-garden-id="forms.textarea"
                  data-garden-version="7.1.10"
                  data-testid="message-field"
                  id="4val-field_1.3.3--input"
                  name="answerBotInputValue"
                  placeholder="Type your question here..."
                  rows="1"
                />
              </div>
            </div>
          </div>
          <button
            aria-label="Send"
            class="c5 index__c-btn--icon___1Yl4x c16 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--pill___QYWDJ index__c-btn--lg___33IF1 "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.1.10"
            tabindex="0"
            type="button"
          >
            <span
              class="container Icon--sendChat"
              data-testid="Icon--sendChat"
              type="Icon--sendChat"
            >
              <svg
                aria-hidden="true"
                realfilename="widget-icon_sendChat.svg"
              />
            </span>
          </button>
        </div>
      </footer>
    </div>
  </div>
</div>
`;
